# franca-capi-someip-sample

./: CMakeLists.txt  README.md  boost-1_55-qnx700.patch  boost-1_55.patch  capicxx-core-runtime.patch  capicxx-someip-runtime.patch  qnx_6.6.0_linux_x86.cmake  qnx_7.0.0_linux_x86_64.cmake
client/: CMakeLists.txt  client.cpp
cmake_modules/: IpcMacro.cmake
config/: commonapi.ini  vsomeip-client.json  vsomeip-service.json
fidl/: Buttons.fdepl  Buttons.fidl  HelloWorld.fdepl  HelloWorld.fidl  ML.fdepl  ML.fidl  MLTypes.fdepl  MLTypes.fidl  SmartML.fdepl  SmartML.fidl  vsome.json  vsomeip-client.json  vsomeip.json
fidl/ML/: ML.fidl  SmartML.fdepl
libraries/: Buttons.cmake  CMakeLists.txt  ML.cmake
scripts/: client.sh  service.sh  vsomeipd.sh
scripts_qnx/: client.sh  service.sh  vsomeipd.sh
service/: CMakeLists.txt  buttonsservice.cpp  buttonsservice.hpp  mlservice.cpp  mlservice.hpp  service.cpp  smartmlservice.cpp  smartmlservice.hpp  stub.hpp
src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp  client.cpp  service.cpp  stub.cpp  stub.hpp
